--- a/administrador/static/styles/mostrar_paciente_administrador.css
+++ b/administrador/static/styles/mostrar_paciente_administrador.css
@@ -269,7 +269,7 @@ strong {
 
 /* Estilos para los botones de edición, guardar y cancelar */
 .save-button, .cancel-button {
-    width: 20%;
+    width: 30%;
     background-color: #008CAB;
     color: white;
     border: none; 
@@ -354,7 +354,130 @@ strong {
     .columna p{
         font-size: 20px;
     }
+
+    .email-container {
+        align-items: flex-start;
+        font-size: 18px;
+        margin-top: -15px;
+        margin-bottom: -5px;
+    }
+
+    /* Ajustar el tamaño del ícono de edición */
+    .edit-icon-svg {
+        width: 18px;
+        height: 18px;
+
+    }
+
+    /* Ajustar los botones */
+    .save-button, .cancel-button {
+        width: 30%; 
+        font-size: 14px;
+        padding: 10px;
+        margin-top: 10px;
+    }
+
+    /* Ajustar el campo de entrada de email */
+    #email-input {
+        max-width: 100%;
+        font-size: 16px;
+        padding: 8px;
+    }
 }
+
+@media screen and (max-width:900px){ 
+    .columna p{
+        font-size: 20px;
+    }
+
+    .email-container {
+        flex-direction: column;
+        align-items: flex-start;
+        font-size: 18px;
+        margin-top: -15px;
+        margin-bottom: -5px;
+    }
+
+    /* Ajustar el tamaño del ícono de edición */
+    .edit-icon-svg {
+        width: 18px;
+        height: 18px;
+    }
+
+}
+
+
+/* Media Query para pantallas menores a 768px */
+@media screen and (max-width: 768px) {
+    /* Ajustar el tamaño del ícono de edición */
+    .edit-icon-svg {
+        width: 18px;
+        height: 18px;
+    }
+
+    /* Ajustar los botones */
+    .save-button, .cancel-button {
+        width: 30%; 
+        font-size: 14px;
+        padding: 10px;
+        margin-top: 10px;
+    }
+
+    /* Ajustar el campo de entrada de email */
+    #email-input {
+        max-width: 100%;
+        font-size: 16px;
+        padding: 8px;
+    }
+}
+
+/* Media Query para pantallas menores a 576px */
+@media screen and (max-width: 576px) {
+    /* Ajustes adicionales para pantallas más pequeñas */
+    .email-container {
+        font-size: 16px;
+        margin-top: -10px;
+        margin-bottom: 0;
+    }
+
+    .edit-icon-svg {
+        width: 16px;
+        height: 16px;
+    }
+
+    .save-button, .cancel-button {
+        font-size: 14px;
+        padding: 8px;
+    }
+
+    #email-input {
+        font-size: 14px;
+        padding: 6px;
+    }
+}
+
+/* Media Query para pantallas menores a 400px */
+@media screen and (max-width: 400px) {
+    .email-container {
+        font-size: 14px;
+    }
+
+    .edit-icon-svg {
+        width: 14px;
+        height: 14px;
+    }
+
+    .save-button, .cancel-button {
+        font-size: 12px;
+        padding: 6px;
+    }
+
+    #email-input {
+        font-size: 12px;
+        padding: 5px;
+    }
+}
+
 
 @media screen and (max-width:600px){
     
