--- a/administrador/templates/editar_datos_paciente_admin.html
+++ b/administrador/templates/editar_datos_paciente_admin.html
@@ -19,7 +19,7 @@
 
 {% block content %}
 
-<form method="POST" action="{% url 'editar_datos_paciente_admin' paciente.id %}" onsubmit="return mostrarMensajeExito()">
+<form method="POST" action="{% url 'editar_datos_paciente_admin' paciente.id %}" id="editar-form" onsubmit="return mostrarMensajeExito()">
     {% csrf_token %}
     <h2> Datos del paciente</h2>
     <h4> Los campos con (*) son obligatorios </h4>
@@ -163,37 +163,43 @@
         <button type="button" class="boton-cancelar" id="boton-cancelar">Cancelar</button>
         <button class="boton-azul" type="submit">Confirmar Cambios</button>
     </div>
+
+    <!-- Modal de éxito -->
+    <div id="modalExito" class="modal" style="display: none;">
+        <div class="contenido-modal">
+            <img src="{% static 'icons/Exito.svg' %}" alt="Éxito">
+            <p>¡Datos actualizados con éxito!</p>
+        </div>
+    </div>
+
 </form>
 
 <script>
-    document.addEventListener("DOMContentLoaded", function() {
-        {% if messages %}
-            {% for message in messages %}
-                Swal.fire({
-                    title: '¡Éxito al Guardar!',
-                    icon: 'success',
-                    confirmButtonText: 'Aceptar',
-                    confirmButtonColor: '#3085d6',
-                    background: '#f0f0f0',
-                    color: '#333', // Color del texto del popup
-                    timer: 2000,
-                    customClass: {
-                        popup: 'custom-popup',
-                        title: 'custom-title',
-                        content: 'custom-content',
-                        confirmButton: 'custom-button'
-                    },
-                    didOpen: () => {
-                        // Centrar el título a lo largo del popup
-                        const title = document.querySelector('.swal2-title');
-                        title.style.textAlign = 'center';
-                        title.style.width = '100%';
-                        title.style.border = 'none';
-                    }
-                });
-            {% endfor %}
-        {% endif %}
+    // Cuando se envía el formulario
+    document.getElementById("editar-form").addEventListener("submit", function(event) {
+        event.preventDefault(); // Prevenir el comportamiento por defecto del formulario
+
+        var form = new FormData(this); // Obtener los datos del formulario
+
+        fetch("{% url 'editar_datos_paciente_admin' paciente.id %}", {
+            method: 'POST',
+            body: form,
+        })
+        .then(response => response.json()) // Obtener la respuesta como JSON
+        .then(data => {
+            if (data.success) {
+                // Mostrar el modal de éxito si la respuesta es exitosa
+                document.getElementById("modalExito").style.display = "block";
+                setTimeout(function() {
+                    document.getElementById("modalExito").style.display = "none";
+                }, 3000); // Ocultar el modal después de 3 segundos
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+        });
     });
+
 
 
     document.getElementById("boton-cancelar").addEventListener("click", function(){
