--- a/ortesisWeb/templates/administrador_base.html
+++ b/ortesisWeb/templates/administrador_base.html
@@ -20,7 +20,7 @@
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
+    <button class="menu-toggle-admin" onclick="toggleSidebar()">☰</button>
     <div class="contenedor-grid">
         <!-- Sidebar -->
         <aside class="sidebar_administrador">
