--- a/ortesisWeb/templates/recepcionista_base.html
+++ b/ortesisWeb/templates/recepcionista_base.html
@@ -20,6 +20,7 @@
     {% block extra_head %}{% endblock %}
 </head>
 <body>
+    <button class="menu-toggle-recepcionista" onclick="toggleSidebar()">☰</button>
     <div class="contenedor-grid">
         <!-- Sidebar -->
         <aside class="sidebar_recepcionista">
@@ -88,6 +89,11 @@
 
     <!-- JavaScript general -->
     <script src="{% static 'js/activeMenu.js' %}"></script>
+    <script>function toggleSidebar() {
+        const sidebar = document.querySelector('.sidebar_administrador, .sidebar_terapeuta, .sidebar_recepcionista');
+        sidebar.classList.toggle('sidebar-activa');
+    }
+    </script>
     
     <!-- Bloque adicional para cargar scripts JS específicos -->
     {% block extra_js %}{% endblock %}
