ajuste color boton sidebar

--- a/ortesisWeb/static/css/base/sidebar.css
+++ b/ortesisWeb/static/css/base/sidebar.css
@@ -284,7 +284,7 @@
         z-index: 1001;
         cursor: pointer;
     }
-    .menu.toggle-admin{
+    .menu-toggle-admin{
         background-color: #001058;
     }
     .menu-toggle-terapeuta{
