Cambio modals de exito y error para modulo terapeuta y borré lineas innecesarias en el css del perfil del terapeuta

--- a/terapeuta/static/css/editar_credenciales.css
+++ b/terapeuta/static/css/editar_credenciales.css
@@ -93,6 +93,42 @@ button:hover {
     color: white;
 }
 
+/* Modal de éxito */
+.contenido-modal-mensaje {
+    display: flex;
+    padding: 20px;
+    background-color: #fefefe;
+    flex-direction: column;
+    gap: 1.25rem;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 0.625rem;
+    width: 40rem; /* Modal más pequeño */
+    height: 20rem; /* Modal más pequeño */
+    margin: auto;
+    position: fixed; /* Asegura que el modal se mantenga fijo */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999; /* Asegura que el modal esté encima de otros elementos */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.8); /* Sombra agregada */
+}
+
+.contenido-modal-mensaje img {
+    width: 120px; /* Tamaño ajustado de la imagen */
+    height: auto; 
+    margin-bottom: 1rem;
+}
+
+.contenido-modal-mensaje h1, .contenido-modal h2, .contenido-modal p {
+    font-size: 1.75rem; /* Aumento del tamaño de la fuente para los encabezados */
+}
+
+.contenido-modal-mensaje p {
+    font-size: 1.25rem; /* Aumento del tamaño de la fuente para el mensaje */
+}
+
 /* Media Queries */
 
 /* Para dispositivos con ancho máximo de 768px */
