--- a/ortesisWeb/templates/terapeuta_base.html
+++ b/ortesisWeb/templates/terapeuta_base.html
@@ -77,35 +77,36 @@
         <!-- Header -->
         <header class="header">
             {% block header %}{% endblock %}
-            <div class="notification-icon">
-                <a href="#">
-                    {% if notificaciones_count > 0 %}
-                        <i class="fas fa-bell" style="color: #008CAB; font-size: 36px;"></i> <!-- Con notificaciones -->
-                    {% else %}
-                        <i class="fas fa-bell-slash" style="color: #008CAB; font-size: 36px;"></i> <!-- Sin notificaciones -->
-                    {% endif %}
-                </a>
-            </div>           
-        
-            <!-- Modal de Notificaciones -->
-            <div id="modalNotificaciones" class="modal-notificaciones" style="display: none;">
-                <div class="contenido-notificaciones">
-                    {% if notificaciones %}
-                        {% for notificacion in notificaciones %}
-                            <div class="item-notificacion" data-id="{{ notificacion.id }}">
-                                <p><strong>Cita de Rutina:</strong><br>
-                                Paciente: {{ notificacion.cita.paciente.first_name }} {{ notificacion.cita.paciente.last_name }}<br>
-                                Hora: {{ notificacion.cita.hora_inicio}} hrs<br>
-                                Sala: {{ notificacion.cita.sala }}</p>
-                                <div class="delete-notification" style="cursor:pointer;">
-                                    <h1>Borrar</h1>
-                                    <i class="fas fa-trash"></i>
+            <div class="notification-container">
+                <div class="notification-icon">
+                    <a href="#">
+                        {% if notificaciones_count > 0 %}
+                            <i class="fas fa-bell" style="color: #008CAB; font-size: 36px;"></i> <!-- Con notificaciones -->
+                        {% else %}
+                            <i class="fas fa-bell-slash" style="color: #008CAB; font-size: 36px;"></i> <!-- Sin notificaciones -->
+                        {% endif %}
+                    </a>
+                </div>
+                <!-- Modal de Notificaciones -->
+                <div id="modalNotificaciones" class="modal-notificaciones">
+                    <div class="contenido-notificaciones">
+                        {% if notificaciones %}
+                            {% for notificacion in notificaciones %}
+                                <div class="item-notificacion" data-id="{{ notificacion.id }}">
+                                    <p><strong>Cita de Rutina:</strong><br>
+                                        Paciente: {{ notificacion.cita.paciente.first_name }} {{ notificacion.cita.paciente.last_name }}<br>
+                                        Hora: {{ notificacion.cita.hora_inicio}} hrs<br>
+                                        Sala: {{ notificacion.cita.sala }}</p>
+                                    <div class="delete-notification" style="cursor:pointer;">
+                                        <h1>Borrar</h1>
+                                        <i class="fas fa-trash"></i>
+                                    </div>
                                 </div>
-                            </div>
-                        {% endfor %}
-                    {% else %}
-                        <p>No hay notificaciones para mostrar.</p>
-                    {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            <p>No hay notificaciones para mostrar.</p>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </header>
