--- a/administrador/static/styles/agregar_terapeuta.css
+++ b/administrador/static/styles/agregar_terapeuta.css
@@ -219,6 +219,27 @@ input[type="checkbox"]::after {
     margin-right: 15px;
 }
 
+/*Estilo para los mensajes de error*/
+.messages {
+    margin: 10px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.messages .success {
+    color: green;
+}
+
+.messages .error {
+    color: red;
+}
+
+.error {
+    color: red;
+    font-size: 0.9em;
+}
 
 @media screen and (max-width: 768px) {
     .divisor-formulario {
