--- a/administrador/templates/admin_recepcionistas.html
+++ b/administrador/templates/admin_recepcionistas.html
@@ -277,11 +277,11 @@
             const cantidadSeleccionados = selectedCheckboxes.length;
             const titulo = estado === 'inactivo' ? 'Cambiar a estado inactivo' : 'Restaurar a estado activo';
             const mensaje = estado === 'inactivo' 
-                ? `¿Desea cambiar a estado inactivo a ${cantidadSeleccionados} recepcionistas? Los recepcionistas podrán ser visualizados y reactivados en la sección de inactivos.`
-                : `¿Desea restaurar a estado activo a ${cantidadSeleccionados} recepcionistas? Los recepcionistas podrán ser visualizados en la sección de activos`;
+                ? `¿Desea cambiar a estado inactivo a <strong>${cantidadSeleccionados}</strong> recepcionistas?<br><br>Los recepcionistas podrán ser visualizados y reactivados en la sección de inactivos.`
+                : `¿Desea restaurar a estado activo a <strong>${cantidadSeleccionados}</strong> recepcionistas?<br><br> Los recepcionistas podrán ser visualizados en la sección de activos`;
 
-            document.getElementById('popup-titulo').textContent = titulo;
-            document.getElementById('popup-mensaje').textContent = mensaje;
+            document.getElementById('popup-titulo').innerHTML = titulo;
+            document.getElementById('popup-mensaje').innerHTML = mensaje;
             document.getElementById('popupModal').style.display = 'block';
 
             document.getElementById('confirmButton').setAttribute('data-estado', estado);
@@ -290,11 +290,18 @@
 
         // Pop-up individual para un recepcionista
         window.mostrarPopUpInactivar = function(recepcionistaId, nombre, rut) {
-            const titulo = `Cambiar a estado inactivo a ${nombre}`;
-            const mensaje = `¿Está seguro de que desea inactivar al recepcionista ${nombre} (${rut})? Este recepcionista podrá ser reactivado en la sección de inactivos.`;
+            const titulo = `Cambiar a estado inactivo a:<br>${nombre}`;
+            const mensaje = `
+            ¿Está seguro de que desea inactivar al/la Recepcionista:?<br>
+            <div style="display: flex; flex-direction: column; align-items: center; text-align: left;">
+                <div><strong>Nombre:</strong> ${nombre}</div>
+                <div><strong>Rut:</strong> ${rut}</div>
+            </div>
+            Este usuario podrá ser reactivado en la sección de inactivos.
+            `;
 
-            document.getElementById('popup-titulo').textContent = titulo;
-            document.getElementById('popup-mensaje').textContent = mensaje;
+            document.getElementById('popup-titulo').innerHTML = titulo;
+            document.getElementById('popup-mensaje').innerHTML = mensaje;
             document.getElementById('popupModal').style.display = 'block';
 
             document.getElementById('confirmButton').setAttribute('data-estado', 'inactivo');
