--- a/administrador/templates/admin_terapeutas.html
+++ b/administrador/templates/admin_terapeutas.html
@@ -281,11 +281,11 @@
             const cantidadSeleccionados = selectedCheckboxes.length;
             const titulo = estado === 'inactivo' ? 'Cambiar a estado inactivo' : 'Restaurar a estado activo';
             const mensaje = estado === 'inactivo' 
-                ? `¿Desea cambiar a estado inactivo a ${cantidadSeleccionados} terapeutas? Los terapeutas podrán ser visualizados y reactivados en la sección de inactivos.`
-                : `¿Desea restaurar a estado activo a ${cantidadSeleccionados} terapeutas? Los terapeutas podrán ser visualizados en la sección de activos`;
+                ? `¿Desea cambiar a estado inactivo a <strong>${cantidadSeleccionados}</strong> terapeutas?<br><br>Los terapeutas podrán ser visualizados y reactivados en la sección de inactivos.`
+                : `¿Desea restaurar a estado activo a <strong>${cantidadSeleccionados}</strong> terapeutas?<br><br>Los terapeutas podrán ser visualizados en la sección de activos`;
 
-            document.getElementById('popup-titulo').textContent = titulo;
-            document.getElementById('popup-mensaje').textContent = mensaje;
+            document.getElementById('popup-titulo').innerHTML = titulo;
+            document.getElementById('popup-mensaje').innerHTML = mensaje;
             document.getElementById('popupModal').style.display = 'block';
 
             document.getElementById('confirmButton').setAttribute('data-estado', estado);
@@ -294,16 +294,24 @@
 
         // Pop-up individual para un terapeuta
         window.mostrarPopUpInactivar = function(terapeutaId, nombre, rut) {
-            const titulo = `Cambiar a estado inactivo a ${nombre}`;
-            const mensaje = `¿Está seguro de que desea inactivar al terapeuta ${nombre} (${rut})? Este terapeuta podrá ser reactivado en la sección de inactivos.`;
-
-            document.getElementById('popup-titulo').textContent = titulo;
-            document.getElementById('popup-mensaje').textContent = mensaje;
+            const titulo = `Cambiar a estado inactivo a:<br>${nombre}`;
+            const mensaje = `
+                ¿Está seguro de que desea inactivar al terapeuta:?<br>
+                <div style="display: flex; flex-direction: column; align-items: center; text-align: left;">
+                    <div><strong>Nombre:</strong> ${nombre}</div>
+                    <div><strong>Rut:</strong> ${rut}</div>
+                </div>
+                Este terapeuta podrá ser reactivado en la sección de inactivos.
+                `;
+            document.getElementById('popup-titulo').innerHTML = titulo;
+            document.getElementById('popup-mensaje').innerHTML = mensaje;
             document.getElementById('popupModal').style.display = 'block';
-
+        
             document.getElementById('confirmButton').setAttribute('data-estado', 'inactivo');
             document.getElementById('confirmButton').setAttribute('data-ids', JSON.stringify([terapeutaId]));
         };
+        
+
         window.mostrarPopUpRestaurar = function(id, nombre) {
             document.getElementById('popup-titulo').textContent = `Restaurar terapeuta`;
             document.getElementById('popup-mensaje').textContent = `¿Está seguro de que desea restaurar a ${nombre}?`;
