cambio size de fuente para acomodar mejora las card en los listados de admin

--- a/administrador/static/css/listar_pacientes_administrador.css
+++ b/administrador/static/css/listar_pacientes_administrador.css
@@ -275,6 +275,9 @@ input[type="checkbox"] {
     max-height: 100%;
     width: auto;
 }
+.centro-tabla{
+    font-size: 21px;
+}
 
 .final-tabla a img{
     width: auto;
