--- a/administrador/static/styles/admin_recepcionista.css
+++ b/administrador/static/styles/admin_recepcionista.css
@@ -265,6 +265,9 @@ input[type="checkbox"] {
     cursor: pointer;
     margin: 0 20px;
 }
+.centro-tabla{
+    font-size: 21px;
+}
 
 .final-tabla {
     display: flex;
