--- a/administrador/static/styles/listar_terapeutas_activos.css
+++ b/administrador/static/styles/listar_terapeutas_activos.css
@@ -292,6 +292,9 @@ input[type="checkbox"] {
     cursor: pointer;
     margin: 0 20px;
 }
+.centro-tabla{
+    font-size: 21px;
+}
 
 .final-tabla {
     display: flex;
