--- a/recepcionista/templates/calendar_asignar_paciente_recepcionista.html
+++ b/recepcionista/templates/calendar_asignar_paciente_recepcionista.html
@@ -1,9 +1,9 @@
-{% extends 'administrador_base.html' %}
+{% extends 'recepcionista_base.html' %}
 
 {% block title %}Agendar Cita{% endblock %}
 
 {% block content %}
 <div style="display: flex; justify-content: center; align-items: center; height: 80vh;">
-    {% include 'calendar_administrador.html' %}
+    {% include 'calendar_recepcionista.html' %}
 </div>
 {% endblock %}
