--- a/administrador/templates/mostrar_terapeuta_administrador.html
+++ b/administrador/templates/mostrar_terapeuta_administrador.html
@@ -59,7 +59,7 @@
         <div class="columna derecha">
             <p><strong>Especialidad:</strong><br> <span>{{ terapeuta.especialidad }}</span></p>
             <p><strong>Disponibilidad:</strong><br> <span>{{ terapeuta.disponibilidad }}</span></p>
-            <p><strong>Horas Trabajadas:</strong><br> <span>{{ terapeuta.horas_trabajadas }}</span></p>
+            <p><strong>Horas Trabajadas:</strong><br> <span>{{ terapeuta.horas_trabajadas.horas }}</span></p>
             <p><strong>Años de Experiencia:</strong><br> <span>{{ terapeuta.experiencia }} Años</span></p>
             
         </div>
